//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  accounts Account [not null]
  sessions Session [not null]
  permission Permission [not null]
  wallets Wallet [not null]
  cells Cell [not null]
  approvals Cell [not null]
  grids Grid [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Grid {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  cells Cell [not null]
  name String [not null]
  widthCells Int [not null]
  heightCells Int [not null]
  permissions Permission [not null]
  user User [not null, note: 'The user who owns the grid']
  userId String [not null]

  indexes {
    (name, userId) [unique]
  }
}

Table Permission {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  permissions String [not null, note: 'Serialized string of the permissions, permissions are represented as bit flags']
  grid Grid [not null]
  gridId String [not null]
  user User [not null]
  userId String [not null]

  indexes {
    (gridId, userId) [unique]
  }
}

Table Content {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  type String [not null]
  name String
  data String
  url String
  cells Cell [not null]
}

Table Cell {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  column Int [not null]
  row Int [not null]
  grid Grid [not null]
  gridId String [not null]
  content Content [not null]
  contentId String [not null]
  user User [not null, note: 'The user who\'s the author of the cell']
  userId String [not null]
  approved Boolean [not null, default: false]
  approvedAt DateTime
  approvedBy User [note: 'The user who approved the cell']
  approvedById String
}

Table Wallet {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  address String [unique, not null]
  balance Float [not null, default: 0]
  user User [not null, note: 'The user who owns the wallet']
  userId String [not null]
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Grid.userId > User.id [delete: Cascade]

Ref: Permission.gridId > Grid.id [delete: Cascade]

Ref: Permission.userId > User.id [delete: Cascade]

Ref: Cell.gridId > Grid.id [delete: Cascade]

Ref: Cell.contentId > Content.id

Ref: Cell.userId > User.id [delete: Cascade]

Ref: Cell.approvedById > User.id [delete: Cascade]

Ref: Wallet.userId > User.id [delete: Cascade]